--- a/source/index.html
+++ b/source/index.html
@@ -1,56 +1,23 @@
 ---
-layout: page
-title: "This is the title for you homepage"
-date: 2013-08-16 23:48
-comments: true
-show_title: false
-sidebar: false
-hero_unit: true
-is_homepage: true
+layout: default
 ---
 
-<div class="grid-wrapper">
-  <div class="grid">
-    <div class="grid__item one-third lap-one-whole palm-one-whole usp">
-      <div class="grid">
-        <div class="grid__item one-whole lap-one-third">
-          <span class="icon">
-            <i class="icon-laptop"></i>
-          </span>
-        </div>
+{% assign index = true %}
 
-        <div class="grid__item one-whole lap-two-thirds">
-          {% include custom/grid_item_left.html %}
-        </div>
-      </div>
-    </div>
+  {% for post in paginator.posts %}
+  {% assign content = post.content %}
+  <article class="listing">
+    {% include blog/post/article.html %}
+  </article>
+  <hr>
+{% endfor %}
 
-    <div class="grid__item one-third lap-one-whole palm-one-whole usp">
-      <div class="grid">
-        <div class="grid__item one-whole lap-one-third">
-          <span class="icon">
-            <i class="icon-search"></i>
-          </span>
-        </div>
+  <div class="pagination">
+    {% if paginator.next_page %}
+      <a class="btn pull-left" href="{{paginator.next_page}}">&larr; Older</a>
+    {% endif %}
 
-        <div class="grid__item one-whole lap-two-thirds">
-          {% include custom/grid_item_middle.html %}
-        </div>
-      </div>
-    </div>
-
-    <div class="grid__item one-third lap-one-whole palm-one-whole usp">
-      <div class="grid">
-        <div class="grid__item one-whole lap-one-third">
-          <span class="icon">
-            <i class="icon-coffee"></i>
-          </span>
-        </div>
-		 
-        <div class="grid__item one-whole lap-two-thirds">
-         {% include custom/grid_item_right.html %}
-        </div>
-      </div>
-    </div>
+    {% if paginator.previous_page %}
+    <a class="btn pull-right" href="{{paginator.previous_page}}">Newer &rarr;</a>
+    {% endif %}
   </div>
-</div>
